set graphic properties for error bars during import, fdo#78041

Change-Id: I43138745b074dcacdafa090d97eeb9aa2ccecf78